Added chip files, plus ELs to increase/reset bet on click

--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ img {
     display: none;
 }
 
-#game-center {
+#game-center, #player-turn-buttons, #double-btn, #new-game {
     display: none;
 }
 
