--- a/style.css
+++ b/style.css
@@ -1,10 +1,5 @@
-/* header {
-    display: block;
-    font-family: "Helvetica Neue", Helvetica, sans-serif;
-} */
-
 #login-form {
-    display: 'block'
+    display: 'none'
 }
 
 h1, h2, h3 {
@@ -16,19 +11,22 @@ input {
 }
 
 button {
+    display: 'block';
     font-size: 12px;
 }
 
 img {
     max-height: 200px;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.chips img {
+    max-height: 100px;
     max-width: 100px;
 }
 
-#cards-pic, #chips-pic {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-}
-#game-center, #player-turn-buttons, #double-btn, #split-btn, #new-game {
+#game-center, #player-turn-buttons, #double-btn, #split-btn, #new-game, #winner {
     display: none;
 }
